<resources>
    <string name="app_name">Aipark Android Mapbox Example</string>

    <string name="zoom_in_to_see_parking_areas">Zoom in to see parking spots</string>
    <string name="details_close">Close</string>
    <string name="chanceFreeSpot">Your chance to find an open parking spot </string>
    <string name="numberOfFreeSpots">Number of open spots</string>
    <string name="leavingParkingSpace">Left </string>
    <string name="spots">Spots</string>
    <string name="opening_hours">Opening hours</string>
    <string name="max_schedule">Allowed parking duration</string>
    <string name="price">Pricing</string>
    <string name="residential_parking_area">Residential parking</string>
    <string name="disabled_parking_area">Disabled parking</string>
    <string name="woman_parking_area">Women\'s parking</string>
    <string name="start_navigation">START NAVIGATION</string>
    <string name="circa">ca.</string>
    <string name="seconds_short">s</string>
    <string name="minutes_short">min</string>
    <string name="live_event_tooltip_postfix">minutes ago</string>
    <string name="navigate_to_final_destination">Yes, to destination</string>
    <string name="navigate_to_next_area">No, next parking area</string>
    <string name="navigation_find_parking_spot">Found a parking spot?</string>
    <string name="optimal_trip_popup_heading">predicted situation</string>
    <string name="optimal_trip_search_time_heading">Search route</string>
    <string name="use_public_transportation">Reduce stress and save money, use public transportation. Get a FREE voucher now! Discount:</string>
    <string name="park_and_ride_navigation">START P + R NAVIGATION</string>
    <string name="speech_good_situation">You can park here easily,</string>
    <string name="speech_middle_situation">There is parking pressure at you destination,</string>
    <string name="speech_bad_situation">It will be hard to find a free parking spot,</string>
    <string name="speech_unknown_situation">Here we have not enough information. Here are parking areas near to your destination.</string>
    <string name="speech_longer_search_time_pre">You will need more than</string>
    <string name="speech_longer_search_time_post">minutes.</string>
    <string name="speech_search_on_street_area">search for a free spot at the street side.</string>
    <string name="speech_drive_to_car_park">you should drive to the car park named</string>
    <string name="speech_drive_to_area_pre">my advise is to park at the</string>
    <string name="speech_drive_to_area_post">parking area.</string>
    <string name="my_car_parking_position">Parking Position</string>
    <string name="destination">Destination</string>
    <string name="find_parking_with_aipark">Find free parking spots with AIPARK</string>
    <string name="parking_area_heading">Parking Area</string>
    <string name="navigation_start_heading">Start Navigation</string>
    <string name="no_occupancies_available">No occupancy information available</string>
    <string name="car_park_heading">Car Park</string>
</resources>
