<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:textAlignment="center">

    <ScrollView
        android:id="@+id/details_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/details_cancel_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/popup_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/optimal_trip_popup_heading"
                android:textAlignment="center"
                android:textColor="@color/colorStatusBar"
                android:textSize="18sp"
                app:textAllCaps="true" />

            <!-- Separator -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/grey_300" />

            <LinearLayout
                android:id="@+id/groupSlots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewSlots"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="32dp"
                        android:tint="@color/grey_600"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:srcCompat="@drawable/parking_areas" />

                    <TextView
                        android:id="@+id/textViewSituation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="40dp"
                        android:text=""
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintLeft_toRightOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/groupSearchTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Separator -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewSearchTime"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="32dp"
                        android:tint="@color/grey_600"
                        app:srcCompat="@drawable/ic_search_black_48dp" />

                    <TextView
                        android:id="@+id/textViewSearchTimeHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/optimal_trip_search_time_heading"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintLeft_toRightOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewSearchTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="80dp"
                    android:layout_weight="1"
                    android:lineSpacingExtra="3dp"
                    android:layout_marginRight="40dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/groupCosts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Separator -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewDollar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="32dp"
                        android:tint="@color/grey_600"
                        app:srcCompat="@drawable/__dollar" />

                    <TextView
                        android:id="@+id/textViewCosts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/price"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintLeft_toRightOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewPriceString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="80dp"
                    android:layout_weight="1"
                    android:lineSpacingExtra="3dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/groupVoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <!-- Separator -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/grey_300" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewVoucherIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="32dp"
                        android:tint="@color/grey_600"
                        app:srcCompat="@drawable/ic_directions_bus_black_48dp" />

                    <TextView
                        android:id="@+id/textViewVoucher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:lineSpacingExtra="3dp"
                        android:layout_marginEnd="40dp"
                        android:text="@string/use_public_transportation"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintLeft_toRightOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:id="@+id/p_r_destination_layout"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp">

                    <Button
                        android:id="@+id/navigateButtonPR"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/popup_button_arrival_green"
                        android:text="@string/park_and_ride_navigation"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:stateListAnimator="@null" />

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:padding="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:alpha="1"
                        android:tint="@color/white"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_directions_railway_black_48dp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:id="@+id/final_destination_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/navigateButton"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/popup_button_arrival_blue"
                    android:text="@string/start_navigation"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:stateListAnimator="@null" />

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:alpha="1"
                    android:tint="@color/white"
                    android:visibility="visible"
                    app:srcCompat="@drawable/car" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/details_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:background="@color/white"
            android:padding="0dp"
            android:stateListAnimator="@null"
            android:text="@string/details_close"
            android:textColor="@color/mapbox_navigation_view_color_primary_text_dark"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="-20dp"
            android:layout_toLeftOf="@id/details_cancel_button"
            android:alpha="1"
            android:padding="25dp"
            android:tint="@color/mapbox_navigation_view_color_primary_text"
            android:visibility="visible"
            app:srcCompat="@drawable/close" />
    </RelativeLayout>
</LinearLayout>
